src/test/egern/success/print_function_call.egern
func hello(a) {
    return a;
}
print(hello(3));
