src/test/egern/fail/assigning_value_to_function_fail.egern
func hello() {
    return;
}

hello = 3;
print(hello);
